--- a/html/index.html
+++ b/html/index.html
@@ -4,11 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="https://kit.fontawesome.com/a3e3fdc76c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <div class="menu-btn">
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+        </div>
 
+        <nav class="menu">
+            <div class="menu-branding">
+                <div class="portrait"></div>
+            </div>
+            <ul class="menu-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/work.html">My Work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact.html">How To Reach Me</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main id="home">
+        <h1 class="lg-heading">
+            Dejan<span class="text-secondary"> Dostic</span>
+        </h1>
+        <h2 class="sm-heading">
+            Front End Developer
+        </h2>
+        <div class="icons">
+            <a href="#!">
+                <i class="fab fa-twitter fa-2x"></i>
+            </a>
+            <a href="#!">
+                <i class="fab fa-facebook fa-2x"></i>
+            </a>
+            <a href="#!">
+                <i class="fab fa-linkedin fa-2x"></i>
+            </a>
+            <a href="#!">
+                <i class="fab fa-github fa-2x"></i>
+            </a>
+        </div>
+    </main>
 
     <script src="../js/main.js"></script>
 </body>
