--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://kit.fontawesome.com/a3e3fdc76c.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="bg-img">
     <header>
         <div class="menu-btn">
             <div class="btn-line"></div>
