--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,10 @@
     </header>
     <main id="home">
         <h1 class="lg-heading">
-            Dejan<span class="text-secondary"> Dostic</span>
+            Dejan
+        </h1>
+        <h1 class="lg-lastname">
+            Dostic
         </h1>
         <h2 class="sm-heading">
             Front End Developer
